--- a/src/app/design/design.component.css
+++ b/src/app/design/design.component.css
@@ -1,4 +1,9 @@
+.outputs{
+  width: 200px;
+}
+
 /* selecting part of the screen */
+
 .row-everything{
   display: flex;
   flex-direction: column;
@@ -27,6 +32,7 @@
 .group-button-insertImages{
   display: flex;
   flex-direction: column;
+  width: 400px;
   gap: 10px;
 }
 
