--- a/src/app/edit-category/edit-category.component.html
+++ b/src/app/edit-category/edit-category.component.html
@@ -1,6 +1,5 @@
 <div>
-<p *ngFor="let data of Categories"> prices of the stuff [{{data.category}}] and [{{data.thumbnail_addr}}]</p>
-<p>{{Categories[0]}}</p>
+<p *ngFor="let data of get_categories"> prices of the stuff [{{data.category}}] and [{{data.thumbnail_addr}}]</p>
 <p>new name is [{{newName}}]</p>
 </div>
 
