--- a/src/app/greeter/greeter.component.html
+++ b/src/app/greeter/greeter.component.html
@@ -1,2 +1,4 @@
+<h1>test: {{test}}</h1>
+
 <input type="button" name="postBtn" style="width:250px" (click)="PostData()" value="My name is PDU Builder">
 <p *ngFor="let data of retGetData"> prices of the stuff {{data.insert_name}} and {{data.category}}</p>
