--- a/src/app/new-insert/new-insert.component.html
+++ b/src/app/new-insert/new-insert.component.html
@@ -1,5 +1,3 @@
-<p>{{chosenCategory}}</p>
-
 <div class="content">
 
 <h1 class="title">New insert</h1>
@@ -32,7 +30,7 @@
 
         <div class="check-profiles" >
         <p>profiles that fit this insert:</p>
-        <mat-checkbox *ngFor="let profile of parseProfiles()" [value]="profile"> {{profile}}</mat-checkbox>
+        <mat-checkbox *ngFor="let profile of parseProfiles(); index as i" [checked]="profileStates[i].selected" [value]="profile" (change)="selectedProfile($event.checked, i, profile)"> {{profile}}</mat-checkbox>
         </div>
 
         <div class="section-process-time">
@@ -49,7 +47,7 @@
                             matInput
                             [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete">
-                        <mat-option *ngFor="let option of get_processData" [value]="option.process" (selectedOption)="selectedprocess(option.process, index)">
+                        <mat-option *ngFor="let option of get_processData" [value]="option.process" (selectedOption)="selectedProcess(option.process, index)">
                         {{option.process}}
                         </mat-option>
                     </mat-autocomplete>
