--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,16 +1,8 @@
-<p>
-  test output:  <br>
-  {{bom}} <br>
-  {{summary}} <br>
-  {{delete}} <br>
-  {{order}}
-</p>
-
 <div class="content">
 
   <h1>View orders</h1>
 
-  <table cdk-table [dataSource]="dataGET" class="orderTable">
+  <table cdk-table [dataSource]="get_ordersData" class="orderTable">
     <ng-container cdkColumnDef="orderId">
       <th cdk-header-cell *cdkHeaderCellDef> Order id </th>
       <td cdk-cell *cdkCellDef="let row"> {{row.order_id}} </td>
@@ -27,26 +19,29 @@
     </ng-container>
 
     <ng-container cdkColumnDef="viewOrder">
-      <th cdk-header-cell *cdkHeaderCellDef> View order </th>
-      <td cdk-cell *cdkCellDef="let row"> <button mat-button (click)="clickViewOrder(row.order_id)">view order</button> </td>
+      <th cdk-header-cell *cdkHeaderCellDef> Edit order </th>
+      <td cdk-cell *cdkCellDef="let row"> <button mat-button (click)="clickViewOrder(row.order_id)">Edit order</button> </td>
       <!-- {{row.viewBomString}} -->
     </ng-container>
 
     <ng-container cdkColumnDef="viewBom">
       <th cdk-header-cell *cdkHeaderCellDef> View Bom </th>
-      <td cdk-cell *cdkCellDef="let row"> <button mat-button (click)="clickViewBom(row.order_id)"> View BOM</button> </td>
+                                                                                <!-- at some point, route to orderId -->
+      <td cdk-cell *cdkCellDef="let row"> <button mat-button (click)="clickViewBom(row.order_id)" routerLink="orders/order-bom"> View BOM</button> </td>
       <!-- {{row.viewBomString}} -->
     </ng-container>
 
     <ng-container cdkColumnDef="viewSum">
       <th cdk-header-cell *cdkHeaderCellDef> view order summary </th>
-      <td cdk-cell *cdkCellDef="let row"> <button mat-button (click)="clickViewSummary(row.order_id)"> view summary</button> </td>
+      <td cdk-cell *cdkCellDef="let row"> <button mat-button (click)="clickViewSummary(row.order_id)" routerLink="orders/order-summary"> view summary</button> </td>
       <!-- {{row.viewSummaryString}} -->
     </ng-container>
 
     <ng-container cdkColumnDef="delete">
       <th cdk-header-cell *cdkHeaderCellDef> delete </th>
       <td cdk-cell *cdkCellDef="let row"> <button mat-button (click)="clickDelete(row.order_id)"> delete order</button> </td>
+      <!-- <button mat-raised-button routerLink="/design/order-information">Fill in order information </button> -->
+
       <!-- {{row.delete}} -->
     </ng-container>
     
