--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -1,6 +1,6 @@
 
 <div class="row-everything">
-
+<h1>Design</h1>
 <!-- PDU design with sliding inserts -->
 <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
     <div class="example-box" *ngFor="let insert of sequence" cdkDrag>
