--- a/src/app/edit-material/edit-material.component.html
+++ b/src/app/edit-material/edit-material.component.html
@@ -1,5 +1,3 @@
-<p>output: {{test}}</p>
-
 <h1 class="title-new">Edit Material</h1>
 
 <div class="content"> 
@@ -67,7 +65,7 @@
 <button class="button-save" mat-raised-button (click)="clickEventSave($event)">Opslaan </button>
 
 
-<div class="out">
+<!-- <div class="out">
     <div class="GET-data">
         <p>data: []</p>
     </div>
@@ -104,6 +102,6 @@
         <p>name : [{{viewMaterialName}}]</p>
         <p>price : [{{viewMaterialPrice}}]</p>
     </div>
-</div>
+</div> -->
 
-<p>fifhwiehfiwfihP: {{get_materialsData[8].price}}</p>
+<!-- <p>fifhwiehfiwfihP: {{get_materialsData[8].price}}</p> -->
