multiple things fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,16 @@
 .menu-bar{
     display: flex;
     height: 100%;
-    width: 15%;
+    width: 210px;
     justify-content: left;
     align-items: flex-start;
     float: left;
+    /* position: fixed; */
 }
 
 .menu-options{
   display: flex;
-  align-items:flex-start;
+  align-items: flex-start;
   flex-direction: column;
   margin-top: 30pt;
 }
