--- a/src/app/edit-insert/edit-insert.component.html
+++ b/src/app/edit-insert/edit-insert.component.html
@@ -108,5 +108,6 @@
         <button class="button-upload-schem-image" mat-raised-button>Upload real image</button>
     </div>
     <button class="button-save-image" mat-raised-button (click)="clickSave()">Save</button>
+    <button class="button-save-image" mat-button routerLink="/edit-inserts/edit-specs" (click)="clickSave()">Add options</button>
 </div>
 </div>
