--- a/src/app/greeter/greeter.component.html
+++ b/src/app/greeter/greeter.component.html
@@ -3,4 +3,4 @@
 <input type="button" name="postBtn" style="width:250px" (click)="PostData()" value="My name is PDU Builder">
 <p *ngFor="let data of retGetData"> prices of the stuff {{data.insert_name}} and {{data.category}}</p>
 
-<img src="{{something}}" class="logo-image">
+<img id="image" src="">
