--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -1,10 +1,26 @@
-
 <div class="row-everything">
 <h1>Design</h1>
+<div class="length-spacers">
+<p>Length: {{pduLen}}</p>
+<!-- <mat-checkbox *ngFor="let profile of parseProfiles(); index as i" [checked]="profileStates[i].selected" [value]="profile" (change)="selectedProfile($event.checked, i, profile)"> {{profile}}</mat-checkbox> -->
+<!-- <mat-checkbox [checked]="autoSpacer" (click)="placeSpacers()"> auto spacer</mat-checkbox> -->
+<mat-slide-toggle
+  color="primary"
+  [checked]="autoSpacer"
+  (change)="placeSpacers()">
+  Automatisch bindplaat plaatsen
+</mat-slide-toggle>
+<!-- <button mat-raised-button (click)="placeSpacers()" color="autoSpacerButtonColor">Plaats bindplaten</button> -->
+</div>
+
 <!-- PDU design with sliding inserts -->
-<div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let insert of sequence" cdkDrag>
-      <img [src]="folder+insert" alt="your image"/>
+<div cdkDropList 
+  cdkDropListOrientation="horizontal" 
+  class="display-tiles" 
+  (cdkDropListDropped)="drop($event)">
+    <div class="example-box" *ngFor="let insert of sequence; index as i" cdkDrag>
+        <button (contextmenu)="deleteInsert(i)"><img [src]="folder+insert.image" alt="your image"/>
+        </button>
     </div>
 </div>
 
@@ -46,7 +62,7 @@
   <!-- choose inserts -->
   <div class="inserts-section">    
     <div class="group-button-insertImages">
-      <button class="buttons-images" *ngFor="let sample of getInserts(chosenCategory)" mat-raised-button (click)="clickAddInsert(sample)">
+      <button class="buttons-images" *ngFor="let sample of getInserts(chosenCategory); index as i" mat-raised-button (click)="clickAddInsert(sample, i)">
         <img class="inserts-images" src={{folder}}{{sample}} alt="your image"/>
         <p>{{sample}}</p>
       </button>
@@ -64,14 +80,14 @@
 
   <div class="specifications-amount">
      <!-- Drop down menu for Profiles -->
-     <div class="Options"  *ngFor="let question of questions">
+     <div class="Options" *ngFor="let question of QA">
       <p> </p>
-      <p>{{question}}</p>
+      <p>{{question.question}}</p>
       <mat-form-field appearance="fill">
         <mat-label>Choose an option</mat-label>
         <mat-select [formControl]="qControls" required>
           <mat-option>--</mat-option>
-          <mat-option *ngFor="let answer of answers" [value]="answer">
+          <mat-option *ngFor="let answer of question.answers" [value]="answer">
             {{answer}}
           </mat-option>
         </mat-select>
@@ -88,13 +104,13 @@
   <div class="outputs">
     <p>saved sequence: </p>
     <mat-divider></mat-divider>
-    <p *ngFor="let i of test"> {{i}}</p>
-    <p>----------------------------------------------------</p>
+    <p *ngFor="let i of prevSequence"> {{i.name}}</p>
+    <p>-------------------------------------</p>
     <p>amount of inserts: {{sequence.length}}</p>
-    <p>----------------------------------------------------</p>
+    <p>-------------------------------------</p>
     <p>inserts on PDU:</p>
     <mat-divider></mat-divider>
-    <p *ngFor="let i of sequence">{{i}}</p>
+    <p *ngFor="let i of sequence">{{i.name}}</p>
   </div>
 
 </div>
