--- a/src/app/edit-material/edit-material.component.html
+++ b/src/app/edit-material/edit-material.component.html
@@ -12,13 +12,15 @@
             <div class="inputs-processes">
 
             <mat-form-field appearance="fill">
-                <input class="input-process" matInput (keyup)="inputEventEditProcessName($event)" placeholder="Proces naam bewerken">
+                <input class="input-process" matInput (keyup)="inputEventEditProcessName($event)" value="{{viewProcessName}}" placeholder="Proces naam bewerken">
             </mat-form-field>
 
             <mat-form-field appearance="fill">
-                <input class="input-process-pricing" matInput (keyup)="inputEventEditProcessPrice($event)" placeholder="bewerk prijs">
-            </mat-form-field>
+                <input class="input-process-pricing" matInput (keyup)="inputEventEditProcessPrice($event)" value="{{viewProcessPrice}}" placeholder="bewerk prijs">
+            </mat-form-field>            
         </div>
+        <button class="button-save" mat-raised-button (click)="clickDeleteProcess($event)">delete process </button>
+
     </div>
 
 
@@ -30,9 +32,9 @@
         </mat-form-field>
 
         <mat-card>
-            <mat-card-title>ProfileName</mat-card-title>
-            <mat-card-subtitle>ReferenceNumber <br>
-                price per meter
+            <mat-card-title>{{viewProfileName}}</mat-card-title>
+            <mat-card-subtitle>{{inputSearchProfile}} <br>
+                {{viewProfilePrice}}
             </mat-card-subtitle>
             <mat-card-actions>
                 <button mat-button (click)="clickEventDeleteProfile($event)">Delete</button>
@@ -49,9 +51,9 @@
         </mat-form-field>
 
         <mat-card>
-            <mat-card-title>MaterialName</mat-card-title>
-            <mat-card-subtitle>ReferenceNumber <br>
-                price per unit
+            <mat-card-title>{{viewMaterialName}}</mat-card-title>
+            <mat-card-subtitle>{{inputSearchMaterial}} <br>
+                {{viewMaterialPrice}}
             </mat-card-subtitle>
             <mat-card-actions>
                 <button mat-button (click)="clickEventDeleteMaterial($event)">Delete</button>
@@ -62,7 +64,6 @@
 
 </div>
 
-<button class="button-save" mat-raised-button (click)="clickEventSave($event)">Opslaan </button>
 
 
 <!-- <div class="out">
