--- a/src/app/new-insert/new-insert.component.html
+++ b/src/app/new-insert/new-insert.component.html
@@ -106,7 +106,7 @@
         <button class="button-upload-schem-image" mat-raised-button>Upload real image</button>
     </div>
     <button class="button-save-image" mat-raised-button (click)="clickSave()">Save</button>
-    <button class="button-add-specs" mat-raised-button color="primary" routerLink="/new-insert/new-specs">Add options</button>
+    <button class="button-add-specs" mat-raised-button color="primary" routerLink="/new-inserts/new-specs">Add options</button>
 
 
 </div>
