--- a/src/app/new-material/new-material.component.html
+++ b/src/app/new-material/new-material.component.html
@@ -32,9 +32,8 @@
             <mat-card-subtitle>{{inputProfileReferenceNumber}} <br>
                 € {{viewProfilePrice}}
             </mat-card-subtitle>
-            <mat-card-actions>
-                <button mat-button (click)="click_searchProfile()">Search database</button>
-            </mat-card-actions>
+            <!-- <mat-card-actions>
+            </mat-card-actions> -->
         </mat-card>
 
     </div>
@@ -50,25 +49,11 @@
             <mat-card-subtitle>{{inputMaterialReferenceNumber}} <br>
                 € {{viewMaterialPrice}}
             </mat-card-subtitle>
-            <mat-card-actions>
-                <button mat-button (click)="click_searchMaterial()">Search database</button>
-            </mat-card-actions>
+            <!-- <mat-card-actions>
+            </mat-card-actions> -->
         </mat-card>
 
     </div>
 
 </div>
 <button class="button-save" mat-raised-button (click)="click_saveItems()">Opslaan </button>
-
-<p>process name: [{{inputProcessName}}] time: [{{inputProcessPrice}}]</p>
-<br>
-<p>material reference number: [{{inputMaterialReferenceNumber}}]</p>
-<p>profile name: [{{viewProfileName}}] Price per cm: [{{viewProfilePrice}}]</p>
-<p>material search: [{{clickSearchMaterial}}]</p>
-<br>
-<p>profile reference number: [{{inputProfileReferenceNumber}}]</p>
-<p>material name: [{{viewMaterialName}}] Price per unit: [{{viewMaterialPrice}}]</p>
-<p>profile search: [{{clickSearchProfile}}]</p>
-<br>
-<p>save button press [{{clickSave}}]</p>
-
