--- a/src/app/orders/orders.component.css
+++ b/src/app/orders/orders.component.css
@@ -6,7 +6,7 @@
     width: 70%;
   }
   
-  .mat-header-cell {
+  /* .mat-header-cell {
     flex-direction: column;
     justify-content: center;
   }
@@ -14,7 +14,7 @@
   .mat-cell {
     text-align: center;
     justify-content: center;
-  }
+  } */
 
   /* .cdk-header-cell{
     display: flex;
