--- a/src/app/edit-insert/edit-insert.component.html
+++ b/src/app/edit-insert/edit-insert.component.html
@@ -47,7 +47,7 @@
                             matInput
                             [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete">
-                        <mat-option *ngFor="let option of get_processData" [value]="option.process" (selectedOption)="selectedprocess(option.process, index)">
+                        <mat-option *ngFor="let option of get_insertProcess" [value]="option.process" (selectedOption)="selectedprocess(option.process, index)">
                         {{option.process}}
                         </mat-option>
                     </mat-autocomplete>
