--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,8 @@
     <!-- <img src="/images/Insert real/032-8666 10 amp small.jpg" class="logo-image"> -->
 
     <div class = "update-configure-docs-button">
-    <button mat-raised-button color="primary">Update database</button>
+    <button mat-raised-button color="primary" (click)="updateAll()">Update database</button>
     <button mat-raised-button color="primary">Configure documents</button>
     </div>
 </div>
+<p>{{doneUpdating}}</p>
